src/objects/loan__Disbursement_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>loan__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked for Active Disbursement Schedule</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Amount_Disbursed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Amount disbursed as per this disbursement schedule</inlineHelpText>
        <label>Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipLabel>Disbursement Schedule</relationshipLabel>
        <relationshipName>Disbursement_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Disbursal_Status__c</fullName>
        <label>Disbursal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Disbursal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Disbursed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Disbursement_Date__c</fullName>
        <label>Disbursement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Disbursement Schedule</relationshipLabel>
        <relationshipName>Disbursement_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Name_of_Entity__c</fullName>
        <label>Name of Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Prorate_Amount__c</fullName>
        <inlineHelpText>Use Disbursal Transaction amount for proration of distribution amount</inlineHelpText>
        <label>Prorate Amount</label>
        <picklist>
            <controllingField>loan__Split_Calculation_Basis__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Split_Calculation_Basis__c</fullName>
        <inlineHelpText>Percentage of the Disbursal Amount or Fixed Amount</inlineHelpText>
        <label>Split Calculation Basis</label>
        <picklist>
            <picklistValues>
                <fullName>Amount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Value__c</fullName>
        <inlineHelpText>Enter Amount or Percentage value depending upon the Split Calculation Basis</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Disbursement Schedule</label>
    <nameField>
        <displayFormat>DSID-{0000000000}</displayFormat>
        <label>Disbursement Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursement Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Disbursal_Status_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(TEXT(loan__Disbursal_Status__c)), ISNULL(TEXT(loan__Disbursal_Status__c)))</errorConditionFormula>
        <errorMessage>Disbursal Status cannot be null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Percentage_Value_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(loan__Split_Calculation_Basis__c, &apos;Percentage&apos;), loan__Value__c &gt; 100)</errorConditionFormula>
        <errorMessage>For Split Calculation Basis &apos;Percentage&apos;, Value should be less than or equal to 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Split_Calculation_Basis_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(TEXT(loan__Split_Calculation_Basis__c)), ISNULL(TEXT(loan__Split_Calculation_Basis__c)))</errorConditionFormula>
        <errorMessage>Split Calculation Basis cannot be null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Value_Greater_Than_Zero_Check</fullName>
        <active>true</active>
        <errorConditionFormula>loan__Value__c &lt;= 0</errorConditionFormula>
        <errorMessage>Value should be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>